RESOLVED FIXED59353
Fix strict OwnPtr violations in ListHashSet and RenderLayerCompositor
https://bugs.webkit.org/show_bug.cgi?id=59353
Summary Fix strict OwnPtr violations in ListHashSet and RenderLayerCompositor
James Robinson
Reported 2011-04-25 15:15:40 PDT
Fix strict OwnPtr violations in ListHashSet and RenderLayerCompositor
Attachments
Patch (2.99 KB, patch)
2011-04-25 15:16 PDT, James Robinson
levin: review+
James Robinson
Comment 1 2011-04-25 15:16:22 PDT
James Robinson
Comment 2 2011-04-25 15:22:53 PDT
Note You need to log in before you can comment on or make changes to this bug.