2011-04-25  James Robinson  <jamesr@chromium.org>

Reviewed by David Levin.

        Fix strict OwnPtr violations in ListHashSet and RenderLayerCompositor
        https://bugs.webkit.org/show_bug.cgi?id=59353

        * wtf/ListHashSet.h:
        (WTF::::ListHashSet):
2011-04-25  James Robinson  <jamesr@chromium.org>

        Reviewed by David Levin.

        Fix strict OwnPtr violations in ListHashSet and RenderLayerCompositor
        https://bugs.webkit.org/show_bug.cgi?id=59353

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::RenderLayerCompositor):

Canonical link: https://commits.webkit.org/74532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84805 268f45cc-cd09-0410-ab3c-d52691b4dbfc